# mundane

./: .bazelrc  .clang-format  BUILD.bazel  WORKSPACE
tools/: cc.bzl
util/bits/: BUILD.bazel  bit_flag.hpp
util/fs/: BUILD.bazel  file.hpp  path.hpp  tmp.cpp  tmp.hpp
util/memory/: BUILD.bazel  ref_count.hpp  var_len_struct_ptr.hpp
util/msg/: BUILD.bazel  assert.hpp  msg.hpp
util/proc/: BUILD.bazel  proc.cpp  proc.hpp
util/rand/: BUILD.bazel  rand.hpp
