load("@bazel_skylib//lib:selects.bzl", "selects")

config_setting(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "macos",
    constraint_values = [
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "dbg",
    values = {
        "compilation_mode": "dbg",
    },
)

config_setting(
    name = "opt",
    values = {
        "compilation_mode": "opt",
    },
)

selects.config_setting_group(
    name = "windows_opt",
    match_all = [
        ":windows",
        ":opt",
    ],
)

selects.config_setting_group(
    name = "macos_opt",
    match_all = [
        ":macos",
        ":opt",
    ],
)

selects.config_setting_group(
    name = "linux_opt",
    match_all = [
        ":linux",
        ":opt",
    ],
)
